# etpclient-python

./: .flake8  .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci-publish-test-repo.yml  ci-publish.yml  ci-tests.yml  codeql-analysis.yml
etpclient/: __init__.py  main.py  utils.py  websocket_manager.py
etpclient/etp/: connection_register.py  etp_data_bridge.py  etp_notifyer.py  h5_handler.py  hsds_bridge.py  requester.py  serverprotocols.py
tests/: test_utils.py
